tests/NormalTests/paczka1/fuzzy1/63144703.err
Error in line 8: mElpMz5F S530 45,94
Error in line 6: vLFZvSE2 A467 72,4
Error in line 7: fLs A467 20,8
Error in line 9: NdqUmjavRQ S137 29,2
Error in line 10: mElpMz5F S530 121,7
Error in line 17: mElpMz5F S137 63,9
Error in line 32: fLs S137 75,9
Error in line 33: fLs A467 85,5
